--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohttp>=3.8.1
 yarl>=1.7.2
-pytest-homeassistant-custom-component=0.13.45
-flake8=5.0.4
-pytest=7.3.1
+pytest-homeassistant-custom-component==0.13.45
+flake8==5.0.4
+pytest==7.3.1
